Fixed owner field errors
